karl/views/static/ux2/main.css
/* ... */
.portrait{float:left;display:block;width:75px;margin:5px 20px 5px 0;}
.profileDetails{float:left;margin-bottom:2em;}.profileDetails p{margin-bottom:0;}
.profileLabel{font-weight:bold;}
.profileBio{clear:both;display:block;margin-bottom:2em;}
.blogEntry{margin-bottom:1.5em;}
.notification .actions{margin:1em 0 1em 2.75em;}
#actions-overflow-menu{margin:0;}
.karlselectionradiofield label{display:inline;}
#show-only-tag{background-color:#ffffff !important;}
.profilesWrapper{background-color:#ffffff;padding:0;margin:0;display:block;width:100%;}.profilesWrapper .photoProfile{height:130px;background-color:#F1EADE;padding:0;width:33%;margin:0 0.5% 0.5% 0;font-size:0.9em;float:left;display:inline;overflow:hidden;}.profilesWrapper .photoProfile img{font-size:1em;}
.profilesWrapper .photoProfile h4{margin:10px 10px 0;font-weight:normal;font-size:1em;}
.profilesWrapper .photoProfile p{line-height:1.5em;margin:0.5em 10px 10px;}
.profilesWrapper .photoProfile p span{display:block;}
.profilesWrapper .photoProfileEndRow{margin-right:0;}
.profilesWrapper .photoProfileImage{float:left;display:inline;margin:10px;height:100px;width:75px;}.profilesWrapper .photoProfileImage img{border:none;-ms-interpolation-mode:bicubic;}
.profilesWrapper .profileInfoBox{float:left;margin:1em 0 0.2em;line-height:1.5em;overflow:hidden;width:118px;}
.profilesWrapper .profileNoWrap{white-space:nowrap;}
.profilesWrapper a.rightFloatLink{float:right;text-decoration:none;}
.profilesWrapper .visual-clear{clear:both;}
#deactivateModal{display:none;}
#reactivateModal{display:none;}
.tagweight1{font-size:100%;}
.tagweight2{font-size:120%;}
.tagweight3{font-size:140%;}
.tagweight4{font-size:160%;}
.tagweight5{font-size:180%;}
.tagweight6{font-size:200%;}
.tagweight7{font-size:220%;color:green;}

